nvml-wrapper-sys/nvml.h

    typedef struct nvmlDevice_st *nvmlDevice_t;
    /**
 * Union to represent different types of Value
 */
    typedef union nvmlValue_st
    {
        double dVal;               //!< If the value is double
        unsigned int uiVal;        //!< If the value is unsigned int
        unsigned long ulVal;       //!< If the value is unsigned long
        unsigned long long ullVal; //!< If the value is unsigned long long
        signed long long sllVal;   //!< If the value is signed long long
    } nvmlValue_t;
    /*!
 * Types of VM identifiers
 */
    typedef enum nvmlVgpuVmIdType
    {
        NVML_VGPU_VM_ID_DOMAIN_ID = 0, //!< VM ID represents DOMAIN ID
        NVML_VGPU_VM_ID_UUID = 1,      //!< VM ID represents UUID
    } nvmlVgpuVmIdType_t;
    /**
 * vGPU GUEST info state.
 */
    typedef enum nvmlVgpuGuestInfoState_enum
    {
        NVML_VGPU_INSTANCE_GUEST_INFO_STATE_UNINITIALIZED = 0, //!< Guest-dependent fields uninitialized
        NVML_VGPU_INSTANCE_GUEST_INFO_STATE_INITIALIZED = 1,   //!< Guest-dependent fields initialized
    } nvmlVgpuGuestInfoState_t;
    /**
 * GRID license feature code
 */
    typedef enum
    {
        NVML_GRID_LICENSE_FEATURE_CODE_VGPU = 1,        //!< Virtual GPU
        NVML_GRID_LICENSE_FEATURE_CODE_VWORKSTATION = 2 //!< Virtual Workstation
    } nvmlGridLicenseFeatureCode_t;
    /** @} */

    /***************************************************************************************************/
    /** @defgroup nvmlVgpuStructs GRID Virtualization Structs
 *  @{
 */
    /***************************************************************************************************/

    typedef unsigned int nvmlVgpuTypeId_t;
    typedef unsigned int nvmlVgpuInstance_t;
    /**
 * Structure to store Utilization Value and vgpuInstance
 */
    typedef struct nvmlVgpuInstanceUtilizationSample_st
    {
        nvmlVgpuInstance_t vgpuInstance; //!< vGPU Instance
        unsigned long long timeStamp;    //!< CPU Timestamp in microseconds
        nvmlValue_t smUtil;              //!< SM (3D/Compute) Util Value
        nvmlValue_t memUtil;             //!< Frame Buffer Memory Util Value
        nvmlValue_t encUtil;             //!< Encoder Util Value
        nvmlValue_t decUtil;             //!< Decoder Util Value
    } nvmlVgpuInstanceUtilizationSample_t;
    /**
 * Structure to store Utilization Value, vgpuInstance and subprocess information
 */
    typedef struct nvmlVgpuProcessUtilizationSample_st
    {
        nvmlVgpuInstance_t vgpuInstance;              //!< vGPU Instance
        unsigned int pid;                             //!< PID of process running within the vGPU VM
        char processName[NVML_VGPU_NAME_BUFFER_SIZE]; //!< Name of process running within the vGPU VM
        unsigned long long timeStamp;                 //!< CPU Timestamp in microseconds
        unsigned int smUtil;                          //!< SM (3D/Compute) Util Value
        unsigned int memUtil;                         //!< Frame Buffer Memory Util Value
        unsigned int encUtil;                         //!< Encoder Util Value
        unsigned int decUtil;                         //!< Decoder Util Value
    } nvmlVgpuProcessUtilizationSample_t;
    /** @} */

    /** 
 * Information about occurred event
 */
    typedef struct nvmlEventData_st
    {
        nvmlDevice_t device;            //!< Specific device where the event occurred
        unsigned long long eventType;   //!< Information about what specific event occurred
        unsigned long long eventData;   //!< Stores XID error for the device in the event of nvmlEventTypeXidCriticalError,
                                        //   eventData is 0 for any other event. eventData is set as 999 for unknown xid error.
        unsigned int gpuInstanceId;     //!< If MIG is enabled and nvmlEventTypeXidCriticalError event is attributable to a GPU
                                        //   instance, stores a valid GPU instance ID. gpuInstanceId is set to 0xFFFFFFFF
                                        //   otherwise.
        unsigned int computeInstanceId; //!< If MIG is enabled and nvmlEventTypeXidCriticalError event is attributable to a
                                        //   compute instance, stores a valid compute instance ID. computeInstanceId is set to
                                        //   0xFFFFFFFF otherwise.
    } nvmlEventData_t;
    /** @} */

    /***************************************************************************************************/
    /** @defgroup nvmlAccountingStats Accounting Statistics
 *  @{
 *
 *  Set of APIs designed to provide per process information about usage of GPU.
 *
 *  @note All accounting statistics and accounting mode live in nvidia driver and reset 
 *        to default (Disabled) when driver unloads.
 *        It is advised to run with persistence mode enabled.
 *
 *  @note Enabling accounting mode has no negative impact on the GPU performance.
 */
    /***************************************************************************************************/

    /**
 * Describes accounting statistics of a process.
 */
    typedef struct nvmlAccountingStats_st
    {
        unsigned int gpuUtilization; //!< Percent of time over the process's lifetime during which one or more kernels was executing on the GPU.
                                     //! Utilization stats just like returned by \ref nvmlDeviceGetUtilizationRates but for the life time of a
                                     //! process (not just the last sample period).
                                     //! Set to NVML_VALUE_NOT_AVAILABLE if nvmlDeviceGetUtilizationRates is not supported

        unsigned int memoryUtilization; //!< Percent of time over the process's lifetime during which global (device) memory was being read or written.
                                        //! Set to NVML_VALUE_NOT_AVAILABLE if nvmlDeviceGetUtilizationRates is not supported

        unsigned long long maxMemoryUsage; //!< Maximum total memory in bytes that was ever allocated by the process.
                                           //! Set to NVML_VALUE_NOT_AVAILABLE if nvmlProcessInfo_t->usedGpuMemory is not supported

        unsigned long long time; //!< Amount of time in ms during which the compute context was active. The time is reported as 0 if
                                 //!< the process is not terminated

        unsigned long long startTime; //!< CPU Timestamp in usec representing start time for the process

        unsigned int isRunning; //!< Flag to represent if the process is running (1 for running, 0 for terminated)

        unsigned int reserved[5]; //!< Reserved for future use
    } nvmlAccountingStats_t;