nvml-wrapper-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_nvmlEventData_st() {
    assert_eq!(::std::mem::size_of::<nvmlEventData_st>() , 24usize , concat !
               ( "Size of: " , stringify ! ( nvmlEventData_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlEventData_st>() , 8usize , concat !
                ( "Alignment of " , stringify ! ( nvmlEventData_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEventData_st ) ) . device as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEventData_st ) ,
                "::" , stringify ! ( device ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEventData_st ) ) . eventType as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEventData_st ) ,
                "::" , stringify ! ( eventType ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEventData_st ) ) . eventData as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEventData_st ) ,
                "::" , stringify ! ( eventData ) ));
}
pub type nvmlEventData_t = nvmlEventData_st;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlAccountingStats_st {
    pub gpuUtilization: raw::c_uint,
    pub memoryUtilization: raw::c_uint,
    pub maxMemoryUsage: raw::c_ulonglong,
    pub time: raw::c_ulonglong,
    pub startTime: raw::c_ulonglong,
    pub isRunning: raw::c_uint,
    pub reserved: [raw::c_uint; 5usize],
}
#[test]
fn bindgen_test_layout_nvmlAccountingStats_st() {
    assert_eq!(::std::mem::size_of::<nvmlAccountingStats_st>() , 56usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlAccountingStats_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlAccountingStats_st>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlAccountingStats_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) .
                gpuUtilization as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( gpuUtilization ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) .
                memoryUtilization as * const _ as usize } , 4usize , concat !
                (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( memoryUtilization ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) .
                maxMemoryUsage as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( maxMemoryUsage ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . time as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( time ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . startTime as
                * const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( startTime ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . isRunning as
                * const _ as usize } , 32usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( isRunning ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlAccountingStats_st ) ) . reserved as
                * const _ as usize } , 36usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlAccountingStats_st
                ) , "::" , stringify ! ( reserved ) ));
}
impl Clone for nvmlAccountingStats_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlAccountingStats_t = nvmlAccountingStats_st;
pub const nvmlVgpuVmIdType_NVML_VGPU_VM_ID_DOMAIN_ID: nvmlVgpuVmIdType = 0;
pub const nvmlVgpuVmIdType_NVML_VGPU_VM_ID_UUID: nvmlVgpuVmIdType = 1;
pub type nvmlVgpuVmIdType = raw::c_uint;
pub use self::nvmlVgpuVmIdType as nvmlVgpuVmIdType_t;
pub const nvmlVgpuGuestInfoState_enum_NVML_VGPU_INSTANCE_GUEST_INFO_STATE_UNINITIALIZED:
          nvmlVgpuGuestInfoState_enum =
    0;
pub const nvmlVgpuGuestInfoState_enum_NVML_VGPU_INSTANCE_GUEST_INFO_STATE_INITIALIZED:
          nvmlVgpuGuestInfoState_enum =
    1;
pub type nvmlVgpuGuestInfoState_enum = raw::c_uint;
pub use self::nvmlVgpuGuestInfoState_enum as nvmlVgpuGuestInfoState_t;
pub const nvmlGridLicenseFeatureCode_t_NVML_GRID_LICENSE_FEATURE_CODE_VGPU:
          nvmlGridLicenseFeatureCode_t =
    1;
pub const nvmlGridLicenseFeatureCode_t_NVML_GRID_LICENSE_FEATURE_CODE_VWORKSTATION:
          nvmlGridLicenseFeatureCode_t =
    2;
pub type nvmlGridLicenseFeatureCode_t = raw::c_uint;
pub type nvmlVgpuTypeId_t = raw::c_uint;
pub type nvmlVgpuInstance_t = raw::c_uint;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlVgpuInstanceUtilizationSample_st {
    pub vgpuInstance: nvmlVgpuInstance_t,
    pub timeStamp: raw::c_ulonglong,
    pub smUtil: nvmlValue_t,
    pub memUtil: nvmlValue_t,
    pub encUtil: nvmlValue_t,
    pub decUtil: nvmlValue_t,
}
#[test]
fn bindgen_test_layout_nvmlVgpuInstanceUtilizationSample_st() {
    assert_eq!(::std::mem::size_of::<nvmlVgpuInstanceUtilizationSample_st>() ,
               48usize , concat ! (
               "Size of: " , stringify ! (
               nvmlVgpuInstanceUtilizationSample_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlVgpuInstanceUtilizationSample_st>()
                , 8usize , concat ! (
                "Alignment of " , stringify ! (
                nvmlVgpuInstanceUtilizationSample_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuInstanceUtilizationSample_st ) )
                . vgpuInstance as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuInstanceUtilizationSample_st ) , "::" , stringify ! (
                vgpuInstance ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuInstanceUtilizationSample_st ) )
                . timeStamp as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuInstanceUtilizationSample_st ) , "::" , stringify ! (
                timeStamp ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuInstanceUtilizationSample_st ) )
                . smUtil as * const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuInstanceUtilizationSample_st ) , "::" , stringify ! (
                smUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuInstanceUtilizationSample_st ) )
                . memUtil as * const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuInstanceUtilizationSample_st ) , "::" , stringify ! (
                memUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuInstanceUtilizationSample_st ) )
                . encUtil as * const _ as usize } , 32usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuInstanceUtilizationSample_st ) , "::" , stringify ! (
                encUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuInstanceUtilizationSample_st ) )
                . decUtil as * const _ as usize } , 40usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuInstanceUtilizationSample_st ) , "::" , stringify ! (
                decUtil ) ));
}
impl Clone for nvmlVgpuInstanceUtilizationSample_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlVgpuInstanceUtilizationSample_t =
    nvmlVgpuInstanceUtilizationSample_st;
#[repr(C)]
#[derive(Copy)]
pub struct nvmlVgpuProcessUtilizationSample_st {
    pub vgpuInstance: nvmlVgpuInstance_t,
    pub pid: raw::c_uint,
    pub processName: [raw::c_char; 64usize],
    pub timeStamp: raw::c_ulonglong,
    pub smUtil: raw::c_uint,
    pub memUtil: raw::c_uint,
    pub encUtil: raw::c_uint,
    pub decUtil: raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlVgpuProcessUtilizationSample_st() {
    assert_eq!(::std::mem::size_of::<nvmlVgpuProcessUtilizationSample_st>() ,
               96usize , concat ! (
               "Size of: " , stringify ! ( nvmlVgpuProcessUtilizationSample_st
               ) ));
    assert_eq! (::std::mem::align_of::<nvmlVgpuProcessUtilizationSample_st>()
                , 8usize , concat ! (
                "Alignment of " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                vgpuInstance as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                vgpuInstance ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                pid as * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                pid ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                processName as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                processName ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                timeStamp as * const _ as usize } , 72usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                timeStamp ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                smUtil as * const _ as usize } , 80usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                smUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                memUtil as * const _ as usize } , 84usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                memUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                encUtil as * const _ as usize } , 88usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                encUtil ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlVgpuProcessUtilizationSample_st ) ) .
                decUtil as * const _ as usize } , 92usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlVgpuProcessUtilizationSample_st ) , "::" , stringify ! (
                decUtil ) ));
}
impl Clone for nvmlVgpuProcessUtilizationSample_st {
    fn clone(&self) -> Self { *self }
}
